# VisualCompGeom

./: .gitignore  MyCodeAttempt.sln  README.md  VisualCompGeom.sln
CompGeomAlgos/: CPUConvexHull.cpp  CPUConvexHull.slnx  CPUConvexHull.vcxproj  CPUConvexHull.vcxproj.filters  ConvexAPI.h  input.txt
CudaConvexHull/: CudaConvexHull.vcxproj  kernel.cu
CudaPlayground/: CudaPlayground.slnx  CudaPlayground.vcxproj  kernel.cu
DelaunayTriangulation/: DelaunayAPI.h  DelaunayTriangulation.cpp  DelaunayTriangulation.slnx  DelaunayTriangulation.vcxproj  input.txt
FortuneVoronoi/: FortuneAPI.h  FortuneVoronoi.cpp  FortuneVoronoi.slnx  FortuneVoronoi.vcxproj  FortuneVoronoi.vcxproj.filters  input.txt
Geometry3D/: Geometry3D.cpp  Geometry3DAPI.h
RaylibGeometryVisualizer/: .gitignore  CMakeLists.txt  README.md  RaylibGeometryVisualizer.vcxproj  build.ps1  run.ps1
RaylibGeometryVisualizer/src/: algorithm_registry.cpp  algorithm_registry.h  geometry_3d_visualizer.cpp  geometry_3d_visualizer.h  input_register.cpp  input_register.h  main.cpp
Triangulation/: Triangulation.cpp  Triangulation.vcxproj  Triangulation.vcxproj.filters  TriangulationAPI.h  input.txt
include/: Commons.cpp  Commons.h  GeometryScene.h  GeometryScene3D.h
